finish testimonial, blog and footer

--- a/src/atoms/button/style.css
+++ b/src/atoms/button/style.css
@@ -1,17 +1,33 @@
 button {
   cursor: pointer;
-  padding: 1rem 2rem;
-  border-radius: 30px;
-  font-weight: 600;
-  background: transparent;
-  transition: ease-in-out;
+  padding: 1.25rem 2rem;
+  border-radius: 7.375rem;
+  font-weight: 800;
+  font-size: 1rem;
   transition-duration: .3s;
+  font-family: 'DM Sans', sans-serif;
+  border: 1px solid black;
+}
+
+button:hover {
+  background-color: #AD343E;
+  border: 1px solid #AD343E;
+  color: white;
+  animation-duration: 0.3s;
+  transition: ease-in-out;
 }
 
 .isRed {
   background-color: #AD343E;
   color: white;
   border: 1px solid #AD343E;
+}
+button.isRed:hover {
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
+  transition: ease-in-out;
+  transition-duration: .3s;
 }
 
 .menu-button .isRed {
