--- a/src/molecules/card-item/style.css
+++ b/src/molecules/card-item/style.css
@@ -1,12 +1,13 @@
 .card-item {
   background-color: #F9F9F7;
+  border-radius: 1.5rem;
 }
 
-.card-item .container {
+.card-item .card-item-container {
   padding: 2.81rem 2.19rem;
 }
 
-.card-item .container .title {
+.card-item .card-item-container .title {
   color: #AD343E;
   font-size: 1.5rem;
   font-weight: 700;
@@ -14,13 +15,13 @@
   letter-spacing: -0.045rem;
 }
 
-.card-item .container .text {
+.card-item .card-item-container .text {
   color:#414536;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.75rem;
-}
-
-.card-item .container .line {
-  color: #DBDFD0;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #DBDFD0;
 }
