--- a/src/atoms/title/style.css
+++ b/src/atoms/title/style.css
@@ -1,6 +1,13 @@
 h1.main-title{
-  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 3.4375rem;
   font-weight: 500;
   line-height: 3.78125rem;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 550px) {
+  h1.main-title{
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
 }
