--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,14 @@
 html,body{
   margin: auto;
   font-family: 'DM Sans', sans-serif;
+  color: #2C2F24;
 }
 ul {
   list-style: none;
 }
 a{
   text-decoration: none;
-  color: black;
+  color: #2C2F24;
 }
 .main-title{
   font-family: 'Playfair Display', serif;
