--- a/src/organisms/footer/style.css
+++ b/src/organisms/footer/style.css
@@ -53,6 +53,11 @@ footer .top .box-2 ul li a {
   line-height: 1.5rem;
 }
 
+footer .top .box-2 ul li:hover a {
+  color: #AD343E;
+  transition: ease-in-out;
+  transition-duration: 0.2s;
+}
 footer .top .box-3 .img {
   padding-top: 2.5rem;
   display: grid;
@@ -67,7 +72,7 @@ footer .top .box-3 .img img {
 footer .bottom {
   margin-top: 6.25rem;
   padding: 1.88rem;
-  border-top: 1px solid #414536;
+  border-top: 2px solid #414536;
   text-align: center;
 }
 
@@ -75,4 +80,45 @@ footer .bottom p {
   color:#ADB29E;
   font-size: 1rem;
   font-weight: 400;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 550px) {
+  footer .footer-container{
+    padding: 2.5rem 2rem; 
+  }
+  footer .footer-container .top {
+    display: block;
+  }
+  footer .top .box-1 {
+    padding-bottom: 1.5rem;
+  }
+  footer .top .box-1 p {
+    padding: 0.8rem 0;
+    font-size: 0.9rem;
+  }
+  footer .top .box-1 .icon-list {
+    text-align: center;
+  }
+  footer .top .box-2 {
+    font-size: 0.9rem;
+    gap: 0 3rem;
+    padding-bottom: 1.5rem;
+  }
+  footer .top .box-2 ul li {
+    padding-top: 1rem;
+  }
+  footer .top .box-3 .img {
+    padding-top: 1rem;
+  }
+  footer .top .box-3 .img img {
+    width: 100%;
+  }
+  footer .bottom {
+    margin-top: 1rem;
+    padding-top: 0.8rem;
+  }
+  footer .bottom p {
+    font-size: .8rem;
+  }
 }
