--- a/src/organisms/header/style.css
+++ b/src/organisms/header/style.css
@@ -2,7 +2,8 @@ header{
   margin: auto;
   display: flex;
   justify-content: space-around;
-  padding: 2rem 5rem;
+  align-items: center;
+  padding: 1rem 5rem;
   font-size: .8rem;
 }
 .logo{
@@ -26,7 +27,42 @@ nav ul li.active{
   border-radius: 30px;
 }
 
+nav ul li a:hover {
+  color: #AD343E;
+  transition: ease-in-out;
+  transition-duration: 0.3s;
+}
+
 nav ul li a {
   font-size: 16px;
   font-weight: 500;
+}
+
+/* MOBILE */
+header .mobile-icon {
+  display: none;
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  color: #2C2F24;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 991px) {
+  header{
+    justify-content: space-between;
+    padding: 0.8rem 1rem;
+  }
+
+  .logo img {
+    width: 100%;
+  }
+
+  header .mobile-icon {
+    display: block;
+  }
+
+  header .content {
+    display: none;
+  }
 }
