--- a/src/pages/home/components/content/style.css
+++ b/src/pages/home/components/content/style.css
@@ -1,5 +1,6 @@
 .content-web {
   background-color: #F9F9F7;
+  text-align: justify;
 }
 
 .content-web .container {
@@ -7,6 +8,10 @@
   display: grid;
   grid-template-columns: 8fr 4fr;
   align-items: center;
+}
+
+.content-web .container h1.main-title {
+  text-align: left;
 }
 
 .content-web .container .img {
@@ -32,4 +37,62 @@
 
 .content-web .container .detail .list {
   padding-top: 3.12rem;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 550px) {
+  .content-web .container {
+    padding: 2.5rem 2rem;
+    display: block;
+  }
+
+  .content-web .container h1.main-title {
+    text-align: center;
+    font-size: 2.2rem;
+    line-height: 2.2rem;
+  }
+  
+  .content-web .container .img {
+    display: flex;
+  }
+  .content-web .container .img img {
+    width: 100%;
+  }
+  
+  .content-web .container .img .img-left {
+    margin-top: 1rem;
+    padding-right: 1rem;
+    width: 60%;
+  }
+
+  .content-web .container .img .img-right {
+    width: 40%;
+  }
+  
+  .content-web .container .detail {
+    margin-top: 1.5rem;
+  }
+  .content-web .container .detail .text {
+    font-size: 0.8rem;
+    line-height: 1.2rem;
+  }
+  
+  .content-web .container .detail .list {
+    padding-top: 0.8rem;
+  }
+
+  .info-content {
+    font-size: 0.85rem;
+    padding: 0.5rem 0;
+  }
+  
+  .content-web .info-content-icon {
+    color: white;
+    padding: 0.4rem;
+    width: 1.8rem !important;
+    height: 1.8rem !important;
+    background-color: #AD343E;
+    border-radius: 100%;
+    margin-right: 1rem;
+  }
 }
