--- a/src/pages/home/components/hero/style.css
+++ b/src/pages/home/components/hero/style.css
@@ -19,7 +19,7 @@
 .carousel h1 {
   font-size: 6.25rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 5rem;
 }
 
@@ -37,4 +37,45 @@
 .carousel .button1,.carousel  .button2 {
   display: inline;
   padding: 0 0.5rem;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 550px) {
+  .carousel {
+    height: auto;
+  }
+  .carousel .content {
+    padding: 1rem 5rem;
+  }
+  .carousel .content h1 {
+    font-size: 2.5rem;
+    line-height: 2rem;
+  }
+  .carousel .content p {
+    font-size: 0.7rem;
+    padding-top: 0.4rem;
+    line-height: 1rem;
+  }
+  .carousel .button-container {
+    padding-top: 0.5rem;
+  }
+  .carousel .content button {
+    font-weight: 600;
+    font-size: 0.6rem;
+    padding: 0.65rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .carousel .content {
+    padding: 1rem 3.5rem;
+  }
+  .carousel .content h1 {
+    font-size: 2.4rem;
+    line-height: 1.95rem;
+  }
+  .carousel .content p {
+    font-size: 0.6rem;
+    line-height: 0.8rem;
+  }
 }
