--- a/src/pages/home/components/services/style.css
+++ b/src/pages/home/components/services/style.css
@@ -12,3 +12,39 @@
   justify-content: space-around;
   gap: 0 1rem;
 }
+
+.services .container .card-box .card-container .title {
+  padding: 1rem 0;
+  font-size: 1.5rem;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 550px) {
+  .services .container {
+    padding: 2.5rem 2rem;
+  }
+  
+  .services .container h1.main-title {
+    width: 100%;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+  
+  .services .container .service-options {
+    padding-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1rem;
+  }
+
+  .services .container .card-box .card-container .title {
+    padding: 0;
+    font-size: 1.1rem;
+  }
+
+  .services .container .card-box .card-container .detail {
+    font-size: 0.85rem;
+  }
+
+}
