--- a/src/organisms/footer/style.css
+++ b/src/organisms/footer/style.css
@@ -83,6 +83,29 @@ footer .bottom p {
 }
 
 /* RESPONSIVE */
+/* DESKTOP */
+@media only screen and (max-width: 1520px) {
+  footer .footer-container {
+    padding: 5.5rem 7.5rem 0.6rem 7.5rem;
+  }
+  footer .footer-container .top {
+    gap: 5rem;
+  }
+  footer .top .box-1 p, footer .top .box-2 {
+    font-size: 0.95rem;
+  }
+  footer .top .box-3 .img img {
+    width: 100%;
+  }
+  footer .top .box-2 {
+    gap: 3.5rem;
+    width: 60%;
+  }
+  footer .bottom {
+    margin-top: 2.6rem;
+  }
+}
+
 @media only screen and (max-width: 550px) {
   footer .footer-container{
     padding: 2.5rem 2rem; 
@@ -101,6 +124,7 @@ footer .bottom p {
     text-align: center;
   }
   footer .top .box-2 {
+    margin: 0 auto;
     font-size: 0.9rem;
     gap: 0 3rem;
     padding-bottom: 1.5rem;
