--- a/src/pages/components/about/style.css
+++ b/src/pages/components/about/style.css
@@ -77,6 +77,78 @@
 }
 
 /* RESPONSIVE */
+
+/* DESKTOP */
+@media only screen and (max-width: 1520px) {
+  .about .container {
+    padding: 5.5rem 7.5rem;
+    gap: 0 3.7rem;
+  }
+  .about .container h1.main-title {
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+  .about .container .contact-card {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    bottom: -15%;
+    width: 20rem;
+  }
+  .about .container .img {
+    height: 35rem;
+  }
+  .about .container .contact-card .contact-card-box {
+    padding: 2.5rem;
+  }
+  
+  .about .container .contact-card .contact-card-box h3 {
+    font-size: 1.4rem;
+    letter-spacing: -0.045rem;
+    padding-bottom: 0.5rem;
+  }
+  
+  .about .container .content p {
+    padding-top: 1.2rem;
+  }
+  
+  .about .container .content .content-1 {
+    font-size: 1.025rem;
+    line-height: 1.45rem;
+  }
+  
+  .about .container .content .content-2 {
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+  }
+  
+  .about .container .content .about-button {
+    padding-top: 1.5rem;
+  }
+  
+  .about .container .img img {
+    padding-right: 0;
+  }
+
+  .about .container .about-button {
+    text-align: center;
+  }
+
+  .about .container .about-button button {
+    font-weight: 600;
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .about .container .contact-card {
+    bottom: 5%;
+  }
+}
+
+
 @media only screen and (max-width: 550px) {
   .about .container {
     padding: 2.5rem 2rem;
@@ -123,14 +195,12 @@
   }
   
   .about .container .content .content-1 {
-    color: #2C2F24;
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.65rem;
   }
   
   .about .container .content .content-2 {
-    color: #5c6053;
     font-size: 0.85rem;
     line-height: 1.5rem;
   }
