--- a/src/pages/home/components/content/style.css
+++ b/src/pages/home/components/content/style.css
@@ -40,6 +40,44 @@
 }
 
 /* RESPONSIVE */
+@media only screen and (max-width: 1520px) {
+  .content-web .container {
+    grid-template-columns: 7fr 5fr;
+    padding: 5.5rem 7.5rem;
+    gap: 2rem;
+  }
+  .content-web .container .img img {
+    width: 100%;
+  }
+
+  .content-web .container h1.main-title {
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+  .content-web .container .detail .text {
+    font-size: 0.9rem;
+  }
+  
+  .content-web .container .img .img-left {
+    padding-right: 1rem;
+    width: 60%;
+  }
+
+  .content-web .container .img .img-right {
+    width: 40%;
+  }
+
+  .content-web .container .img .img-right .img-3 {
+    padding-top: 0.8rem;
+  }
+  .content-web .container .detail .list {
+    padding-top: 2rem;
+  }
+  .content-web .container .info-content {
+    font-size: 1.1rem;
+  }
+}
+
 @media only screen and (max-width: 550px) {
   .content-web .container {
     padding: 2.5rem 2rem;
