--- a/src/pages/home/components/menu/style.css
+++ b/src/pages/home/components/menu/style.css
@@ -12,11 +12,43 @@
 
 .menu-button .isRed {
   background: transparent;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   color: #AD343E;
 }
 
 /* RESPONSIVE */
+/* DESKTOP */
+@media only screen and (max-width: 1520px) {
+  .menu {
+    padding: 5.5rem 7.5rem; 
+  }
+  .menu h1.main-title {
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+
+  .menu .box .menu-item .box-item img {
+    padding-bottom: 0;
+    width: 40%;
+  }
+
+  .menu .box .menu-item h2 {
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
+  }
+  
+  .menu .box .menu-item p {
+    font-size: 0.8rem;
+    line-height: 1.15rem;
+    padding-bottom: 0.2rem;
+  }
+
+  .menu .box button {
+    font-weight: 600;
+    font-size: 0.8rem;
+    padding: 1rem 1.5rem;
+  }
+}
 @media only screen and (max-width: 550px) {
   .menu {
     padding: 2.5rem 2rem; 
