--- a/src/organisms/footer/style.css
+++ b/src/organisms/footer/style.css
@@ -106,34 +106,42 @@ footer .bottom p {
   }
 }
 
-@media only screen and (max-width: 550px) {
-  footer .footer-container{
-    padding: 2.5rem 2rem; 
-  }
+@media only screen and (max-width: 991px) {
   footer .footer-container .top {
     display: block;
   }
   footer .top .box-1 {
     padding-bottom: 1.5rem;
   }
+  footer .top .box-2 {
+    padding-bottom: 1.5rem;
+  }
+  footer .top .box-3 .img {
+    padding-right: 5rem;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  footer .footer-container{
+    padding: 2.5rem 2rem; 
+  }
+  
   footer .top .box-1 p {
     padding: 0.8rem 0;
     font-size: 0.9rem;
   }
-  footer .top .box-1 .icon-list {
-    text-align: center;
-  }
+  
   footer .top .box-2 {
     margin: 0 auto;
     font-size: 0.9rem;
     gap: 0 3rem;
-    padding-bottom: 1.5rem;
   }
   footer .top .box-2 ul li {
     padding-top: 1rem;
   }
   footer .top .box-3 .img {
     padding-top: 1rem;
+    padding-right: 0;
   }
   footer .top .box-3 .img img {
     width: 100%;
