--- a/src/pages/home/components/content/style.css
+++ b/src/pages/home/components/content/style.css
@@ -78,10 +78,41 @@
   }
 }
 
+@media only screen and (max-width: 991px) {
+  .content-web .container .info-content {
+    font-size: 0.85rem;
+  }
+  
+  .content-web .info-content-icon {
+    color: white;
+    padding: 0.4rem;
+    width: 1.8rem !important;
+    height: 1.8rem !important;
+    background-color: #AD343E;
+    border-radius: 100%;
+    margin-right: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .content-web .container {
+    display: block;
+  }
+  .content-web .container h1.main-title {
+    font-size: 2.2rem;
+  }
+  .content-web .container .detail {
+    margin-top: 1.5rem;
+  }
+  
+  .content-web .container .detail .list {
+    padding-top: 0.8rem;
+  }
+}
+
 @media only screen and (max-width: 550px) {
   .content-web .container {
     padding: 2.5rem 2rem;
-    display: block;
   }
 
   .content-web .container h1.main-title {
@@ -107,30 +138,8 @@
     width: 40%;
   }
   
-  .content-web .container .detail {
-    margin-top: 1.5rem;
-  }
   .content-web .container .detail .text {
     font-size: 0.8rem;
     line-height: 1.2rem;
-  }
-  
-  .content-web .container .detail .list {
-    padding-top: 0.8rem;
-  }
-
-  .info-content {
-    font-size: 0.85rem;
-    padding: 0.5rem 0;
-  }
-  
-  .content-web .info-content-icon {
-    color: white;
-    padding: 0.4rem;
-    width: 1.8rem !important;
-    height: 1.8rem !important;
-    background-color: #AD343E;
-    border-radius: 100%;
-    margin-right: 1rem;
   }
 }
