--- a/src/pages/home/components/hero/style.css
+++ b/src/pages/home/components/hero/style.css
@@ -66,43 +66,94 @@
     padding: 1rem 1.5rem;
   }
 }
-/* MOBILE */
-@media only screen and (max-width: 550px) {
+
+@media only screen and (max-width: 1199px) {
   .carousel {
-    height: auto;
+    height: 30.125rem;
   }
   .carousel .content {
-    padding: 1rem 5rem;
+    padding: 2rem 15rem;
   }
   .carousel .content h1 {
-    font-size: 2.5rem;
-    line-height: 2rem;
+    font-size: 5rem;
+    line-height: 4rem;
+    padding-bottom: 0.5rem;
   }
   .carousel .content p {
-    font-size: 0.7rem;
-    padding-top: 0.4rem;
-    line-height: 1rem;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+    line-height: 1.5rem;
+    font-weight: 400;
   }
   .carousel .button-container {
     padding-top: 0.5rem;
   }
   .carousel .content button {
     font-weight: 600;
-    font-size: 0.6rem;
-    padding: 0.65rem 1rem;
+    font-size: 0.8rem;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 991px) {
   .carousel .content {
-    padding: 1rem 3.5rem;
+    padding: 2rem 10rem;
+  }
+  .carousel {
+    height: 25.125rem;
   }
   .carousel .content h1 {
-    font-size: 2.4rem;
-    line-height: 1.95rem;
+    font-size: 4.25rem;
+    line-height: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel .content {
+    padding: 1.5rem 8rem;
+  }
+  .carousel {
+    height: 22.125rem;
+  }
+  .carousel .content h1 {
+    font-size: 3.8rem;
+    line-height: 3rem;
+  }
+  .carousel .content p {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+  }
+  .carousel .button-container {
+    padding-top: 0.5rem;
+  }
+  .carousel .content button {
+    font-weight: 600;
+    font-size: 0.75rem;
+    padding: 0.85rem 1.2rem;
+  }
+}
+/* MOBILE */
+@media only screen and (max-width: 550px) {
+  .carousel {
+    height: 13.15rem;
+  }
+  .carousel .content {
+    padding: 1rem 5rem;
+  }
+  .carousel .content h1 {
+    font-size: 2rem;
+    line-height: 1.5rem;
   }
   .carousel .content p {
     font-size: 0.6rem;
+    padding-top: 0.2rem;
     line-height: 0.8rem;
+  }
+  .carousel .button-container {
+    padding-top: 0.5rem;
+  }
+  .carousel .content button {
+    font-weight: 600;
+    font-size: 0.5rem;
+    padding: 0.65rem 1rem;
   }
 }
