--- a/src/pages/home/components/hero/style.css
+++ b/src/pages/home/components/hero/style.css
@@ -1,6 +1,6 @@
 .carousel {
   width: 100%;
-  height: 36.125rem;
+  height: 50.125rem;
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100%;
@@ -12,8 +12,25 @@
 }
 
 .carousel .content {
+  z-index: 99;
   padding: 0 29.5rem;
   text-align: center;
+  position: relative;
+}
+
+.carousel .blur {
+  border-radius: 100%;
+  background-color: #FFF;
+  filter: blur(122px);
+  width: 55%;
+  height: 80%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
 }
 
 .carousel h1 {
@@ -24,16 +41,15 @@
 }
 
 .carousel p {
-  padding-top: 1.5rem;
+  padding: 2rem 1rem 0 1rem;
   font-size: 1.25rem;
   font-weight: 400;
-  line-height: 2rem;
+  line-height: 1.75rem;
 }
 
 .carousel .button-container {
   padding-top: 2.5rem;
 }
-
 .carousel .button1,.carousel  .button2 {
   display: inline;
   padding: 0 0.5rem;
@@ -42,9 +58,21 @@
 /* RESPONSIVE */
 
 /* DESKTOP */
-@media only screen and (max-width: 1520px) {
+@media only screen and (max-width: 1520px) { 
+  .carousel .content{
+    padding: 2rem 27rem;
+  }
+  .carousel .content p {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+@media only screen and (max-width: 1420px) {
+  .carousel {
+    height: 43.125rem;
+  }
   .carousel .content {
-    padding: 2rem 20rem;
+    padding: 2rem 22rem;
   }
   .carousel .content h1 {
     font-size: 5rem;
@@ -52,10 +80,7 @@
     padding-bottom: 1rem;
   }
   .carousel .content p {
-    font-size: 1.1rem;
     padding: 1rem 0;
-    line-height: 1.5rem;
-    font-weight: 400;
   }
   .carousel .button-container {
     padding-top: 0.5rem;
@@ -69,10 +94,10 @@
 
 @media only screen and (max-width: 1199px) {
   .carousel {
-    height: 30.125rem;
+    height: 34.125rem;
   }
   .carousel .content {
-    padding: 2rem 15rem;
+    padding: 2rem 17rem;
   }
   .carousel .content h1 {
     font-size: 5rem;
@@ -80,10 +105,7 @@
     padding-bottom: 0.5rem;
   }
   .carousel .content p {
-    font-size: 1rem;
-    padding: 0.5rem 0;
-    line-height: 1.5rem;
-    font-weight: 400;
+    padding: 1rem;
   }
   .carousel .button-container {
     padding-top: 0.5rem;
@@ -99,7 +121,7 @@
     padding: 2rem 10rem;
   }
   .carousel {
-    height: 25.125rem;
+    height: 30.125rem;
   }
   .carousel .content h1 {
     font-size: 4.25rem;
@@ -108,6 +130,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .carousel {
+    height: 32.125rem;
+  }
   .carousel .content {
     padding: 1.5rem 8rem;
   }
@@ -134,14 +159,14 @@
 /* MOBILE */
 @media only screen and (max-width: 550px) {
   .carousel {
-    height: 13.15rem;
+    height: 16.15rem;
   }
   .carousel .content {
-    padding: 1rem 5rem;
+    padding: 1rem 8rem;
   }
   .carousel .content h1 {
-    font-size: 2rem;
-    line-height: 1.5rem;
+    font-size: 2.5rem;
+    line-height: 1.8rem;
   }
   .carousel .content p {
     font-size: 0.6rem;
@@ -155,5 +180,15 @@
     font-weight: 600;
     font-size: 0.5rem;
     padding: 0.65rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .carousel .content h1 {
+    font-size: 2.2rem;
+    line-height: 1.5rem;
+  }
+  .carousel .content {
+    padding: 1rem 5rem;
   }
 }
