--- a/src/pages/home/components/hero/style.css
+++ b/src/pages/home/components/hero/style.css
@@ -179,22 +179,25 @@
     padding-top: 0.2rem;
     line-height: 0.8rem;
   }
-  .carousel .button-container {
-    padding-top: 0.5rem;
-  }
   .carousel .content button {
     font-weight: 600;
     font-size: 0.5rem;
     padding: 0.65rem 1rem;
   }
-}
-
-@media only screen and (max-width: 550px) {
   .carousel .content h1 {
     font-size: 2.2rem;
     line-height: 1.5rem;
   }
   .carousel .content {
     padding: 1rem 5rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .carousel .content p {
+    padding: 0;
+  }
+  .carousel {
+    height: 12.15rem;
   }
 }
