--- a/src/atoms/button/style.css
+++ b/src/atoms/button/style.css
@@ -7,7 +7,7 @@ button {
   font-size: 1rem;
   font-family: 'DM Sans', sans-serif;
   border: 2px solid black;
-  transition: ease-in-out;
+  transition: ease;
   transition-duration: 0.3s;
 }
 
@@ -15,7 +15,7 @@ button:hover {
   background-color: #AD343E;
   border: 2px solid #AD343E;
   color: white;
-  transition: ease-in-out;
+  transition: ease;
   transition-duration: 0.3s;
 }
 
