--- a/src/atoms/menu-item/style.css
+++ b/src/atoms/menu-item/style.css
@@ -8,22 +8,18 @@
   margin: 1rem;
 }
 
-.menu-item .box-item img {
-  padding-bottom: 1.8rem;
-}
-
 .menu-item h2 {
   font-size: 1.35rem;
   font-weight: 600;
   line-height: 1.875rem; /* 125% */
   letter-spacing: -0.045rem;
-  padding-bottom: 0.86rem;
+  padding: 0.8rem 0;
 }
 
 .menu-item p {
   color: #414536;
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.5rem;
-  padding-bottom: 1.8rem;
+  padding-bottom: 1.15rem;
 }
