--- a/src/organisms/header/style.css
+++ b/src/organisms/header/style.css
@@ -1,4 +1,6 @@
 header{
+  position: relative;
+  z-index: 10;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -49,6 +51,73 @@ header .mobile-icon {
   width: 2rem;
   height: 2rem;
   color: #2C2F24;
+  transition: ease 0.2s;
+}
+
+header .mobile-nav {
+  display: none;
+  background-color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  padding: 1rem 0;
+  border-bottom-left-radius: 0.5rem;
+  text-align: center;
+}
+
+header .mobile-nav.block {
+  display: block;
+}
+header .mobile-nav.hidden {
+  display: none;
+}
+
+header .close-icon {
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  text-align: right;
+  transition: ease-in-out 0.3s;
+}
+
+header .close-icon:hover {
+  color:#AD343E;
+  transition: ease-in-out 0.3s;
+}
+
+header .mobile-nav ul li a{
+  font-size: 0.85rem;
+  font-weight: 600;
+}
+
+.mobile-nav ul {
+  margin-top: 1.5rem;
+}
+
+.mobile-nav ul li {
+  padding: 0.8rem 0;
+}
+
+.mobile-nav ul li.active{
+  padding: 0.65rem 1.7rem;
+  background-color: #DBDFD0;
+}
+
+.mobile-nav ul li a:hover {
+  color: #AD343E;
+  transition: ease-in-out;
+  transition-duration: 0.3s;
+}
+
+.mobile-nav .header-button {
+  padding: 0.5rem 3rem;
+}
+
+.mobile-nav .header-button button {
+  font-weight: 600;
+  font-size: 0.8rem;
+  padding: 0.6rem 0.8rem;
 }
 
 /* RESPONSIVE */
@@ -65,8 +134,18 @@ header .mobile-icon {
   header .content {
     display: none;
   }
+}
+
+@media only screen and (max-width: 550px) {
 
   header .logo img {
     width: 100%;
+  }
+  header{
+    padding: 0.2rem 1rem;
+  }
+  header .mobile-icon {
+    width: 1.2rem;
+    height: 1.2rem;
   }
 }
