--- a/src/organisms/top-bar/style.css
+++ b/src/organisms/top-bar/style.css
@@ -65,24 +65,25 @@
   .top-bar {
     padding: 0.3rem;
   }
-  .top-bar .info {
-    display: block;
+  .top-bar .info .info-contact p{
+    line-height: 0.8rem;
+    font-weight: 300;
   }
   .top-bar .info .info-contact .css-i4bv87-MuiSvgIcon-root {
-    width: 0.8rem;
-    height: 0.8rem;
+    width: 0.7rem;
+    height: 0.7rem;
   }
   .top-bar .info .info-contact-content {
     padding-left: 0.5rem;
-    font-size: 0.75rem;
+    font-size: 0.55rem;
+    padding-left: 0.2rem;
+  }
+  .top-bar .icon-footer {
+    width: 1.1rem !important;
+    height: 1.1rem !important;
+    padding: 0.25rem;
   }
 }
 @media only screen and (max-width: 400px) {
-  .top-bar .info {
-    display: block;
-  }
-  .top-bar .icon-footer {
-    width: 1.5rem !important;
-    height: 1.5rem !important;
-  }
+  
 }
